<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_machine_system">

    <fragment
        android:id="@+id/nav_machine_system"
        android:name="com.nqnghia.remoteapplication.ui.machine_system.MachineSystemFragment"
        android:label="@string/menu_machine_system"
        tools:layout="@layout/fragment_machine_system" />

    <fragment
        android:id="@+id/nav_machine_info"
        android:name="com.nqnghia.remoteapplication.ui.machine_info.MachineInfoFragment"
        android:label="@string/fragment_machine_info"
        tools:layout="@layout/fragment_machine_info" />

    <fragment
        android:id="@+id/nav_device_sensor"
        android:name="com.nqnghia.remoteapplication.ui.device_sensor.DeviceSensorFragment"
        android:label="@string/menu_status_devices_and_sensor"
        tools:layout="@layout/fragment_device_sensor" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.nqnghia.remoteapplication.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.nqnghia.remoteapplication.ui.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.nqnghia.remoteapplication.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.nqnghia.remoteapplication.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistical"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.nqnghia.remoteapplication.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.nqnghia.remoteapplication.ui.setting.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.nqnghia.remoteapplication.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <activity
        android:id="@+id/loginActivity"
        android:name="com.nqnghia.remoteapplication.LoginActivity"
        android:label="@string/login"
        tools:layout="@layout/activity_login" />

    <activity
        android:id="@+id/nav_machine_list"
        android:name="com.nqnghia.remoteapplication.ui.machine_list.MachineListFragment"
        android:label="@string/fragment_machine_list"
        tools:layout="@layout/fragment_machine_list" />

</navigation>